<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.datwheat.juwan.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/juwan_description"
        android:textAllCaps="true"
        android:textColor="#70FFFFFF"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:id="@+id/textView3"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:contentDescription="@string/profile_picture_content_description"
        android:cropToPadding="false"
        android:scaleType="centerInside"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_picture"/>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="8dp"
        app:cardElevation="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/main_gradient_background_selector">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="false"
                android:scaleType="fitCenter"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_title"
                app:srcCompat="@drawable/ic_code_white_48dp"
                android:contentDescription="@string/card_image_content_description"/>

            <TextView
                android:id="@+id/card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-light"
                android:text="Work"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:text="Projects I’m proud of, featuring a lot of open-source work."
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"/>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="48dp"
                app:cardBackgroundColor="#20000000"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <Button
                    android:id="@+id/button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:paddingBottom="8dp"
                    android:paddingEnd="72dp"
                    android:paddingStart="72dp"
                    android:paddingTop="8dp"
                    android:text="@string/go_button_text"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    tools:text="GO"/>
            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
