<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context="io.github.datwheat.juwan.WorkActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/indigo"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="0dp"
        android:contextClickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@color/indigo"
                app:cardElevation="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:layout_width="64dp"
                    android:id="@+id/projectImageView"
                    android:layout_height="64dp"
                    android:contentDescription="@string/project_image_content_description"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#333"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@+id/cardView3"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/project_name"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="#828282"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/cardView3"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:text="@string/project_description"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintVertical_bias="0.0"/>

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>


